--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,13 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Environment variables (SECURITY)
+.env
+.env.local
+.env.production
+.env.development
+environment.ts
+environment.prod.ts
+src/environments/environment.ts
+src/environments/environment.prod.ts
